--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,8 +1,12 @@
+<%= csrf_meta_tags %>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <p id="notice"><%= notice %></p>
 
 <h1>Products</h1>
 
 <table>
+<table class="table">
   <thead>
     <tr>
       <th>Name</th>
